edit the diagram part

--- a/src/diagram/diagram_template.config
+++ b/src/diagram/diagram_template.config
@@ -1,11 +1,11 @@
 ######################
 #Vertex
-#name/sublattice/r/tau
-v 0 2 10 0.5
-v 1 2 10 0.5
-v 2 2 10 0.5
-v 3 2 10 0.5
-v 4 2 10 0.5
+#name/sublattice/r_x/r_y/tau/spin_in/spin_out
+v 0 2 1 0 0.5 0 1
+v 1 2 1 0 0.5 1 0
+v 2 2 1 0 0.5 1 1
+v 3 2 1 0 0.5 0 0
+v 4 2 1 0 0.5 0 1
 ######################
 #WLine
 #start/end
@@ -13,9 +13,9 @@ w 1 4
 w 2 5
 ######################
 #GLine
-#start/end/spin_in/spin_out
-g 0 1 0 1
-g 1 2 1 1
-g 2 3 1 0
-g 4 5 0 0
-g 5 4 1 0
+#start/end
+g 0 1
+g 1 2
+g 2 3
+g 4 5
+g 5 4
