--- a/src/diagram/diagram_template.config
+++ b/src/diagram/diagram_template.config
@@ -5,17 +5,15 @@ v 0 2 1 0 0.5 0 1
 v 1 2 1 0 0.5 1 0
 v 2 2 1 0 0.5 1 1
 v 3 2 1 0 0.5 0 0
-v 4 2 1 0 0.5 0 1
 ######################
 #WLine
-#start/end
-w 1 4
-w 2 5
+#start/end/k
+w 0 1 0
+w 2 3 1
 ######################
 #GLine
-#start/end
-g 0 1
-g 1 2
-g 2 3
-g 4 5
-g 5 4
+#start/end/k
+g 0 1 1
+g 1 2 1
+g 2 3 0
+g 3 0 1
