--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,14 @@
 cmake_minimum_required (VERSION 2.6)
 project (FeynmanSimulator)
-set(CMAKE_CXX_COMPILER icc)
+set(CMAKE_CXX_COMPILER icpc)
+#set(CMAKE_CXX_COMPILER clang++)
 #set(CMAKE_CXX_FLAGS "-lz")
 #set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+
 
 file(GLOB_RECURSE SRCS *.cpp)
 file(GLOB_RECURSE HDRS *.h)
