--- a/src/diagram/diagram_template.config
+++ b/src/diagram/diagram_template.config
@@ -4,14 +4,14 @@
 v 0 1 1,0 0.5 0 0
 v 1 1 1,0 0.5 0 0
 v 2 1 1,0 0.5 0 0
-v 3 1 1,0 0.5 0 0
+v 3 1 1,0 0.5 0 1
 #WLine
-#start/end/k
-w 0 1 0
-w 2 3 1
+#start/end/k/isDelta/isMeasure
+w 0 1 0 0 0
+w 2 3 1 0 0
 #GLine
-#start/end/k
-g 0 1 1
-g 1 2 1
-g 2 3 0
-g 3 0 1
+#start/end/k/isMeasure
+g 0 1 1 0
+g 1 2 1 0
+g 2 3 0 0
+g 3 0 1 0
