--- a/src/diagram/diagram_initialize.config
+++ b/src/diagram/diagram_initialize.config
@@ -1,12 +1,13 @@
-######################
-#nVer
-#name/sublattice/r_x/r_y/tau/spin_in/spin_out
-v 0 1 1,0 0.5 0 0
-v 1 1 1,0 0.5 0 0
-#WLine
-#start/end/k/isDelta/isMeasure
-w 0 1 0 0 1
-#GLine
-#start/end/k/isMeasure
-g 0 1 1 0
-g 1 0 1 0
+const char InitialDiagram[]="\
+######################                              \n\
+#nVer                                               \n\
+#name/sublattice/r_x/r_y/tau/spin_in/spin_out       \n\
+v 0 1 1,0 0.5 0 0                                   \n\
+v 1 1 1,0 0.5 0 0                                   \n\
+#WLine                                              \n\
+#start/end/k/isDelta/isMeasure                      \n\
+w 0 1 0 0 1                                         \n\
+#GLine                                              \n\
+#start/end/k/isMeasure                              \n\
+g 0 1 1 0                                           \n\
+g 1 0 1 0";
