--- a/src/diagram/diagram_template.config
+++ b/src/diagram/diagram_template.config
@@ -1,17 +1,18 @@
-######################
-#nVer
-#name/sublattice/r_x/r_y/tau/spin_in/spin_out
-v 0 1 1,0 0.5 0 0
-v 1 1 1,0 0.5 0 0
-v 2 1 1,0 0.5 0 0
-v 3 1 1,0 0.5 0 1
-#WLine
-#start/end/k/isDelta/isMeasure
-w 0 1 0 0 0
-w 2 3 1 0 0
-#GLine
-#start/end/k/isMeasure
-g 0 1 1 0
-g 1 2 1 0
-g 2 3 0 0
-g 3 0 1 0
+const char TestDiagramString[]="\
+######################                                  \n\
+#nVer                                                   \n\
+#name/sublattice/r_x/r_y/tau/spin_in/spin_out           \n\
+v 0 1 1,0 0.5 0 0                                       \n\
+v 1 1 1,0 0.5 0 0                                       \n\
+v 2 1 1,0 0.5 0 0                                       \n\
+v 3 1 1,0 0.5 0 1                                       \n\
+#WLine                                                  \n\
+#start/end/k/isDelta/isMeasure                          \n\
+w 0 1 0 0 0                                             \n\
+w 2 3 1 0 0                                             \n\
+#GLine                                                  \n\
+#start/end/k/isMeasure                                  \n\
+g 0 1 1 0                                               \n\
+g 1 2 1 0                                               \n\
+g 2 3 0 0                                               \n\
+g 3 0 1 0";
