add interaction; debug CheckDiag

--- a/src/module/diagram/diagram_initialize.config
+++ b/src/module/diagram/diagram_initialize.config
@@ -1,5 +1,7 @@
 const char InitialDiagram[]="\
 ######################                              \n\
+#SignFermiLoop                                      \n\
+s 1                                                 \n\
 #nVer                                               \n\
 #name/sublattice/r_x/r_y/tau/spin_in/spin_out       \n\
 v 0 1 1,0 0.5 0 0                                   \n\
