--- a/src/module/diagram/diagram_template.config
+++ b/src/module/diagram/diagram_template.config
@@ -1,5 +1,7 @@
 const char TestDiagramString[]="\
 ######################                                  \n\
+#SignFermiLoop                                          \n\
+s 1                                                     \n\
 #nVer                                                   \n\
 #name/sublattice/r_x/r_y/tau/spin_in/spin_out           \n\
 v 0 1 1,0 0.5 0 0                                       \n\
@@ -9,7 +11,7 @@ v 3 1 1,0 0.5 0 1                                       \n\
 #WLine                                                  \n\
 #start/end/k/isDelta/isMeasure                          \n\
 w 0 1 0 0 0                                             \n\
-w 2 3 1 0 0                                             \n\
+w 2 3 1 0 1                                             \n\
 #GLine                                                  \n\
 #start/end/k/isMeasure                                  \n\
 g 0 1 1 0                                               \n\
