refactoring diagram IO done

--- a/src/module/diagram/diagram_initialize.config
+++ b/src/module/diagram/diagram_initialize.config
@@ -1,4 +1,5 @@
-const char InitialDiagram[]="\
+const char InitialDiagram[]="{'SignFermiLoop': 1.0,'Ver': [{'Name': 0, 'Sublat': 0, 'Coordi': [1, 0], 'Tau': 0.5, 'SpinIn': 0, 'SpinOut' :0}, {'Name': 1, 'Sublat': 0, 'Coordi': [1, 0], 'Tau': 0.5, 'SpinIn': 0, 'SpinOut' :0}], 'W': [{'IN': 0, 'OUT': 1, 'K': 1, 'IsDelta': False, 'IsMeasure': True}], 'G': [{'IN': 0, 'OUT': 1, 'K': 1, 'IsMeasure': False}, {'IN': 1, 'OUT': 0, 'K': 2, 'IsMeasure': False}]}";
+/*
 ######################                              \n\
 #SignFermiLoop                                      \n\
 s 1                                                 \n\
@@ -13,3 +14,4 @@ w 0 1 1 0 1                                         \n\
 #start/end/k/isMeasure                              \n\
 g 0 1 1 0                                           \n\
 g 1 0 2 0";
+*/
