--- a/src/module/diagram/diagram_template.config
+++ b/src/module/diagram/diagram_template.config
@@ -1,4 +1,6 @@
-const char TestDiagramString[]="\
+const char TestDiagramString[]="{'SignFermiLoop': -1.0, 'Ver': [{'Name': 0, 'Sublat': 0, 'Coordi': [1, 0], 'Tau': 0.1, 'SpinIn': 1, 'SpinOut' :1}, {'Name': 1, 'Sublat': 0, 'Coordi': [1, 0], 'Tau': 0.2, 'SpinIn': 1, 'SpinOut' :1}], 'W': [{'IN': 0, 'OUT': 1, 'K': 1, 'IsDelta': False, 'IsMeasure': True}], 'G': [{'IN': 0, 'OUT': 1, 'K': 1, 'IsMeasure': False}, {'IN': 1, 'OUT': 0, 'K': 2, 'IsMeasure': False}]}}";
+
+/*
 ######################                                  \n\
 #SignFermiLoop                                          \n\
 s -1                                                    \n\
@@ -13,3 +15,5 @@ w 0 1 1 0 1                                             \n\
 #start/end/k/isMeasure                                  \n\
 g 0 1 1 0                                               \n\
 g 1 0 2 0";
+*/
+
