--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ ADD_EXECUTABLE(simulator.exe  ${SRCS} ${HDRS})
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 find_package(PythonInterp REQUIRED)
+#find_package(PythonLibsNew REQUIRED)
 find_package(PythonDev REQUIRED)
 find_package(NumPy REQUIRED)
 # Require version >= 1.6
@@ -30,5 +31,6 @@ include_directories(
 message(${PYTHON_INCLUDE_DIR})
 message(${PYTHON_LIBRARIES})
 message(${NUMPY_VERSION})
+message(${NUMPY_INCLUDE_DIRS})
 target_link_libraries(simulator.exe ${PYTHON_LIBRARIES})
 install (TARGETS simulator.exe DESTINATION ${PROJECT_SOURCE_DIR}/..)
