--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (FeynmanSimulator)
 #set(CMAKE_CXX_COMPILER icpc)
-#set(CMAKE_CXX_COMPILER clang++)
+#set(CMAKE_CXX_COMPILER g++)
+#set(CMAKE_CXX_COMPILER clang)
 #set(CMAKE_BUILD_TYPE Debug)
 #set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
